fix: 修复编译错误 - 添加缺失的getter方法和Java 8兼容性
- Stock.java: 添加 getSectionCode() 和 getSecondarySectionCode() getter
- Section.java: 添加 getParentCode() getter
- Section.java: 将 .toList() 改为 .collect(Collectors.toList()) 以兼容 Java 8